--- a/coursera-test/site/indextt.html
+++ b/coursera-test/site/indextt.html
@@ -48,7 +48,7 @@
 </div>
 
 <div>
- <button type="button" class="navbar-toggle collapsed" class="navbar-toggler-right" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+ <button type="button" class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
           <span class="sr-only">toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"> </span>
